# someC

./: CMakeLists.txt  README.md  base.c  base.h  inputCounter.c  keywords.c  longLine.c
base_staff/: README.md  base.c  base.h  longLine.c  longLine.h  sort.h  sort_demo.c
base_staff/basics/: Makefile  base.c  base.h
base_staff/bit_ops/: Makefile  bit_ops.c
base_staff/concat_files/: Makefile  concat_files.c
base_staff/input_counter/: Makefile
base_staff/keywords/: Makefile
base_staff/line_sort/: Makefile  lineSort.c  lineSort.h
base_staff/long_line/: Makefile  longLine.c
base_staff/sort/: Makefile  sort.c  sort.h
data_structures/: README.md
data_structures/chained_hashtable/: Makefile  chtbl.c  chtbl.h  chtbl.mk  chtbl_demo.c
data_structures/circled_list/: circular_list.c  circular_list.h  circular_list.mk  circular_list_demo.c
data_structures/circular_list/: Makefile  circular_list.c  circular_list.h  circular_list.mk  circular_list_demo.c
data_structures/double_linked_list/: Makefile  double_linked_list.mk  double_linked_list_demo.c  double_list.c  double_list.h
encryption/: Makefile  README.md  bit_ops.c  bit_ops.h  encrypt.c  encrypt.h  encrypt.mk  encryption_demo.c
linux_sysprog/: README.md  child_process.c  file_ops.c  file_ops.h  file_stat.c  find_file_in_dir.c  map_demo.c  multi_signal_handler.c  multi_signal_handler.h  poll_demo.c  readv_demo.c  rlimits.c  select_demo.c  send_sighup.c  set_highest_priority.c  signal_payload.c  sort_block.c  sort_inode.c  sort_inode.h  stat.c  time_demo.c  time_demo.h  writev_demo.c
(+79 files in other folders)
